# auto-info-collector

./: README.md  config.yaml  daily_arxiv.py  lark_version.py  pyproject.toml
docs/: agent-arxiv-daily.json
