[tool.poetry]
name = "auto-info-collector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
arxiv = "^2.1.3"
pyyaml = "^6.0.2"
langchain-openai = "^0.3.7"
lark-oapi = "^1.4.10"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
